Fixing sign up form on IE11

--- a/css/_jobcentre_theme.less
+++ b/css/_jobcentre_theme.less
@@ -1149,6 +1149,7 @@ a.header-action:link, a.header-action:visited {
     border: none;
     background: #fff;
     line-height: 44px;
+    height: 44px;
 }
 
 .user-signup-field-highlight {
